examples/type_system/failing/59_strict_module_public_effect_missing_with.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn log(msg: String) -> Unit {
    print(msg)
}

fn main() -> Unit {
}
